fix spacing

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,10 +1,13 @@
 #about {
     background: $COLOR_SECONDARY;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
     line-height: 1.5;
-    padding: $SECTION_PADDING;
+    padding: $SECTION_SPACING;
 
     & > * {
-        margin: 0 auto;
+        width: 100%;
         max-width: $MAX-WIDTH;
     }
 
