--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -1,5 +1,5 @@
 #contact {
-    padding: $SECTION_PADDING;
+    padding: $SECTION_SPACING;
     
     & > * {
         margin: 0 auto;
