--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,7 +2,7 @@ header {
     // background: $COLOR_OFF_BLACK;
     width: 100%;
     position: absolute;
-    padding: $SECTION_PADDING;
+    padding: $SECTION_SPACING;
 }
 
 nav {
